Bug Fix: Disalignment of 2nd to rest of ToolButtons

--- a/react/src/components/toolButton/toolButton.module.css
+++ b/react/src/components/toolButton/toolButton.module.css
@@ -3,4 +3,6 @@
   height: 100%;
   /* background-color: rgb(107, 248, 241); */
   border: 0px;
+  background-color: transparent;
+  cursor:pointer
 }
