--- a/react/src/components/toolbar/toolbar.module.css
+++ b/react/src/components/toolbar/toolbar.module.css
@@ -9,5 +9,5 @@
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
 }
